--- a/backup.yml
+++ b/backup.yml
@@ -8,10 +8,10 @@
 #      password: "Bullf00d"
   tasks:
   - name: Obter informações dos dispositivos
-    cisco.ios.ios_facts:
+    ios_facts:
   
   - name: create a backup
-    cisco.ios.ios_config:
+    ios_config:
       backup: yes
       backup_options: 
 #        filename: '{{ansible_net_hostname}}'
