--- a/backup.yml
+++ b/backup.yml
@@ -2,16 +2,13 @@
 - hosts: all
   connection: local
   gather_facts: no
-#  vars:
-#    provider:
-#      username: "admin"
-#      password: "Bullf00d"
+     password: "Bullf00d"
   tasks:
   - name: Obter informações dos dispositivos
-    ios_facts:
+    cisco.ios.ios_facts:
   
   - name: create a backup
-    ios_config:
+    cisco.ios.ios_config:
       backup: yes
       backup_options: 
 #        filename: '{{ansible_net_hostname}}'
